# stock-logistics-release-channel

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
sale_stock_release_channel/: README.rst  __manifest__.py
sale_stock_release_channel_delivery/: README.rst  __manifest__.py
sale_stock_release_channel_delivery_date/: README.rst  __manifest__.py
sale_stock_release_channel_delivery_date/i18n/: it.po
sale_stock_release_channel_delivery_date_plan_shipment_lead_time/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
stock_release_channel/: README.rst  __manifest__.py
stock_release_channel/data/: ir_cron_data.xml
stock_release_channel_auto_release/: README.rst  __manifest__.py
stock_release_channel_carrier_alternative/: README.rst  __manifest__.py
stock_release_channel_cutoff/: README.rst  __manifest__.py
stock_release_channel_delivery/: README.rst  __manifest__.py
stock_release_channel_partner_address/: README.rst  __manifest__.py
stock_release_channel_partner_delivery_window/: README.rst  __manifest__.py
stock_release_channel_plan/: README.rst  __manifest__.py
stock_release_channel_plan_process_end_time/: README.rst  __manifest__.py
stock_release_channel_plan_shipment_lead_time/: README.rst  __manifest__.py
stock_release_channel_process_end_time/: README.rst  __manifest__.py
stock_release_channel_shipment_advice/: README.rst  __manifest__.py
stock_release_channel_shipment_lead_time/: README.rst  __manifest__.py
stock_release_channel_warehouse_calendar/: README.rst  __manifest__.py
(+61 files in other folders)
