[project]
name = "odoo-addons-oca-stock-logistics-release-channel"
version = "18.0.20250702.0"
dependencies = [
    "odoo-addon-stock_release_channel==18.0.*",
    "odoo-addon-stock_release_channel_process_end_time==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
